Taking off current photo border to see if that solves spacing

--- a/stylesheetLandingPage.css
+++ b/stylesheetLandingPage.css
@@ -73,7 +73,7 @@ p.viz-page {
 /* Viz page, current image - has less bottom padding*/
 .current-img {
     float: left;
-    border: 1px solid rgb(228, 32, 32);
+    /* border: 0.5px solid rgb(228, 32, 32); */
     /* box-shadow: 1px 1px 1px 1px; */
     padding-right: 0px;
     padding-bottom: 2px;
